Recyclerview ama nekess chwaya Auth fih mochkla fel login (controle de saisie)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.example.astrofn.SignUp"></activity>
-        <activity android:name=".MainActivity"/>
-        <activity android:name="com.example.astrofn.loginActivity" >
-
+        <activity android:name="com.example.astrofn.listePlanet"></activity>
+        <activity android:name="com.example.astrofn.SignUp" />
+        <activity android:name=".MainActivity" />
+        <activity android:name="com.example.astrofn.loginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
