--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.example.astrofn.listePlanet"></activity>
+        <activity android:name="com.example.astrofn.MainActivity"></activity>
+        <activity android:name="com.example.astrofn.listePlanet" />
         <activity android:name="com.example.astrofn.SignUp" />
         <activity android:name=".MainActivity" />
         <activity android:name="com.example.astrofn.loginActivity">
