--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,13 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-        <activity android:name="com.example.astrofn.MainActivity"></activity>
-
+        <activity android:name=".Aide"></activity>
+        <activity android:name="com.example.astrofn.MainActivity" />
         <activity android:name="com.example.astrofn.SignUp" />
-        <activity android:name=".MainActivity" />
-        <activity android:name="com.example.astrofn.loginActivity"></activity>
-            <activity android:name="com.example.astrofn.listePlanet" >
+        <activity android:name="com.example.astrofn.loginActivity" />
+        <activity android:name="com.example.astrofn.listePlanet" />
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
