--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Aide"></activity>
-        <activity android:name="com.example.astrofn.MainActivity" />
+        <activity android:name="com.example.astrofn.SecondActivity"></activity>
+        <activity android:name=".Aide" />
+        <activity android:name="com.example.astrofn.MainActivity"
+            android:parentActivityName="com.example.astrofn.listePlanet"
+            android:label="Details"/>
         <activity android:name="com.example.astrofn.SignUp" />
         <activity android:name="com.example.astrofn.loginActivity" />
         <activity android:name="com.example.astrofn.listePlanet" />
